fix dropdown text alignment

--- a/lumigator/frontend/src/styles/_components.scss
+++ b/lumigator/frontend/src/styles/_components.scss
@@ -152,6 +152,7 @@
 }
 
 .p-select-label {
+  align-content: center;
   font-size: variables.$l-font-size-sm;
 }
 
